--- a/index.liquid
+++ b/index.liquid
@@ -119,176 +119,60 @@ layout: client-layout.liquid
 
 
 
-<section class="c-bg-primary pt-5 pb-5">
+<section class="c-bg-primary pt-5 pb-5" id="services">
     <h2 class="text-center text-light">Our Services</h2>
-    <div class="container-fluid">
-        <div id="serviceCarousel" class="carousel slide" data-ride="carousel">
-            <ol class="carousel-indicators">
-                <li data-target="#serviceCarousel" data-slide-to="0" class="active"></li>
-                <li data-target="#serviceCarousel" data-slide-to="1"></li>
-                <li data-target="#serviceCarousel" data-slide-to="2"></li>
-            </ol>
-
-
-
-            <div class="container carousel-inner ">
-                <div class="carousel-item p-5 active">
-                    <div class="row">
-                        <div class="col-md-4 p-5">
-                            <img src="/images/macbook.jpg" class="w-100">
-                            <div class="card w-100 text-center">
-
-                                <div class="card-body text-center">
-                                    <h5>Book111</h5>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem
-                                        minima non magnam
-                                        eum quibusdam, </p>
-                                    <a href="#">Read more.</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 p-5">
-                            <img src="/images/macbook.jpg" class="w-100">
-                            <div class="card w-100 text-center">
-
-
-                                <div class="card-body text-center">
-                                    <h5>Book</h5>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem
-                                        minima non magnam
-                                        eum quibusdam, </p>
-                                    <a href="#">Read more.</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 p-5">
-                            <img src="/images/macbook.jpg" class="w-100">
-                            <div class="card w-100 text-center">
-
-
-                                <div class="card-body text-center">
-                                    <h5>Book</h5>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem
-                                        minima non magnam
-                                        eum quibusdam, </p>
-                                    <a href="#">Read more.</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-                <div class="carousel-item p-5 ">
-                    <div class="row">
-                        <div class="col-md-4 p-5">
-                            <img src="/images/macbook.jpg" class="w-100">
-                            <div class="card w-100 text-center">
-
-                                <div class="card-body text-center">
-                                    <h5>Book111</h5>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem
-                                        minima non magnam
-                                        eum quibusdam, </p>
-                                    <a href="#">Read more.</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 p-5">
-                            <img src="/images/macbook.jpg" class="w-100">
-                            <div class="card w-100 text-center">
-
-
-                                <div class="card-body text-center">
-                                    <h5>Book</h5>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem
-                                        minima non magnam
-                                        eum quibusdam, </p>
-                                    <a href="#">Read more.</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 p-5">
-                            <img src="/images/macbook.jpg" class="w-100">
-                            <div class="card w-100 text-center">
-
-
-                                <div class="card-body text-center">
-                                    <h5>Book</h5>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem
-                                        minima non magnam
-                                        eum quibusdam, </p>
-                                    <a href="#">Read more.</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-                <div class="carousel-item p-5 ">
-                    <div class="row">
-                        <div class="col-md-4 p-5">
-                            <img src="/images/macbook.jpg" class="w-100">
-                            <div class="card w-100 text-center">
-
-                                <div class="card-body text-center">
-                                    <h5>Book111</h5>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem
-                                        minima non magnam
-                                        eum quibusdam, </p>
-                                    <a href="#">Read more.</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 p-5">
-                            <img src="/images/macbook.jpg" class="w-100">
-                            <div class="card w-100 text-center">
-
-
-                                <div class="card-body text-center">
-                                    <h5>Book</h5>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem
-                                        minima non magnam
-                                        eum quibusdam, </p>
-                                    <a href="#">Read more.</a>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-4 p-5">
-                            <img src="/images/macbook.jpg" class="w-100">
-                            <div class="card w-100 text-center">
-
-
-                                <div class="card-body text-center">
-                                    <h5>Book</h5>
-                                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem
-                                        minima non magnam
-                                        eum quibusdam, </p>
-                                    <a href="#">Read more.</a>
-                                </div>
-                            </div>
-                        </div>
-                    </div>
-
-
-                </div>
-
-
-
+    <div class="container text-light">
+        <div class="row">
+            <div class="col-md-6">
+                <img src="/images/laptop.png" alt="laptop banner" class="w-100">
             </div>
+            <div class="col-md-6">
+                <h3>Laptop Services</h3>
+                <ul>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                </ul>
+            </div>
+        </div>
+        <div class="row">
 
-
-
-
-            <a class="carousel-control-prev" href="#serviceCarousel" role="button" data-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="sr-only">Previous</span>
-            </a>
-            <a class="carousel-control-next" href="#serviceCarousel" role="button" data-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="sr-only">Next</span>
-            </a>
+            <div class="col-md-6">
+                <h3>Apple/ Macbook/ iMac Services</h3>
+                <ul>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                </ul>
+            </div>
+            <div class="col-md-6">
+                <img src="/images/apple_family.png" alt="apple family" class="w-100">
+            </div>
+        </div>
+        <div class="row">
+            <div class="col-md-6">
+                <img src="/images/projector.png" alt="projector" class="w-100">
+            </div>
+            <div class="col-md-6">
+                <h3>Projector Services</h3>
+                <ul>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                    <li>Points one</li>
+                </ul>
+            </div>
         </div>
     </div>
 </section>
