--- a/index.liquid
+++ b/index.liquid
@@ -120,29 +120,30 @@ layout: client-layout.liquid
 
 
 <section class="c-bg-primary pt-5 pb-5" id="services">
-    <h2 class="text-center text-light">Our Services</h2>
+    <h1 class="text-center text-light mb-4">Our Services</h1>
     <div class="container text-light">
         <div class="row">
-            <div class="col-md-6">
-                <img src="/images/laptop.png" alt="laptop banner" class="w-100">
+            <div class="col-md-6 p-4 d-none d-md-inline">
+                <img src="/images/laptop.png" alt="laptop banner" class="w-100 ">
             </div>
-            <div class="col-md-6">
-                <h3>Laptop Services</h3>
+            <div class="col-md-6 p-4">
+                <h3 class="point-title">Laptop Services</h3>
                 <ul>
-                    <li>Points one</li>
-                    <li>Points one</li>
-                    <li>Points one</li>
-                    <li>Points one</li>
-                    <li>Points one</li>
-                    <li>Points one</li>
-                    <li>Points one</li>
+                    <li>Laptop sales</li>
+                    <li>Laptop sales</li>
+                    <li>Laptop sales</li>
+                    <li>Laptop sales</li>
+                    <li>Laptop sales</li>
+                    <li>Laptop sales</li>
+                    <li>Laptop sales</li>
+
                 </ul>
             </div>
         </div>
         <div class="row">
 
-            <div class="col-md-6">
-                <h3>Apple/ Macbook/ iMac Services</h3>
+            <div class="col-md-6 p-4">
+                <h3 class="point-title">Apple/ Macbook/ iMac Services</h3>
                 <ul>
                     <li>Points one</li>
                     <li>Points one</li>
@@ -153,16 +154,16 @@ layout: client-layout.liquid
                     <li>Points one</li>
                 </ul>
             </div>
-            <div class="col-md-6">
-                <img src="/images/apple_family.png" alt="apple family" class="w-100">
+            <div class="col-md-6 p-4 d-none d-md-inline">
+                <img src="/images/apple_family.png" alt="apple family" class="w-100 ">
             </div>
         </div>
         <div class="row">
-            <div class="col-md-6">
-                <img src="/images/projector.png" alt="projector" class="w-100">
+            <div class="col-md-6 p-4 d-none d-md-inline">
+                <img src="/images/projector.png" alt="projector" class="w-100 ">
             </div>
-            <div class="col-md-6">
-                <h3>Projector Services</h3>
+            <div class="col-md-6 p-4">
+                <h3 class="point-title">Projector Services</h3>
                 <ul>
                     <li>Points one</li>
                     <li>Points one</li>
@@ -228,5 +229,179 @@ layout: client-layout.liquid
             <span class="carousel-control-next-icon" aria-hidden="true"></span>
             <span class="sr-only">Next</span>
         </a>
+    </div>
+</section>
+
+
+<section id="whyUs" class="pb-5 pt-5">
+    <h1 class="text-center mb-5">Why Choose Us</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col-md-3">
+                <div class="card w-100 text-center">
+                    <svg width="6em" height="6em" viewBox="0 0 16 16" class="c-card-logo bi bi-wallet2"
+                        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M12.136.326A1.5 1.5 0 0 1 14 1.78V3h.5A1.5 1.5 0 0 1 16 4.5v9a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 13.5v-9a1.5 1.5 0 0 1 1.432-1.499L12.136.326zM5.562 3H13V1.78a.5.5 0 0 0-.621-.484L5.562 3zM1.5 4a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-13z" />
+                    </svg>
+
+                    <div class="card-body text-center">
+                        <h5>Estimate</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem minima non
+                            magnam
+                            eum quibusdam, </p>
+                        <a href="#">Read more.</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card w-100 text-center">
+                    <svg width="6em" height="6em" viewBox="0 0 16 16" class="c-card-logo bi bi-wallet2"
+                        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M12.136.326A1.5 1.5 0 0 1 14 1.78V3h.5A1.5 1.5 0 0 1 16 4.5v9a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 13.5v-9a1.5 1.5 0 0 1 1.432-1.499L12.136.326zM5.562 3H13V1.78a.5.5 0 0 0-.621-.484L5.562 3zM1.5 4a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-13z" />
+                    </svg>
+
+                    <div class="card-body text-center">
+                        <h5>Estimate</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem minima non
+                            magnam
+                            eum quibusdam, </p>
+                        <a href="#">Read more.</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card w-100 text-center">
+                    <svg width="6em" height="6em" viewBox="0 0 16 16" class="c-card-logo bi bi-wallet2"
+                        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M12.136.326A1.5 1.5 0 0 1 14 1.78V3h.5A1.5 1.5 0 0 1 16 4.5v9a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 13.5v-9a1.5 1.5 0 0 1 1.432-1.499L12.136.326zM5.562 3H13V1.78a.5.5 0 0 0-.621-.484L5.562 3zM1.5 4a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-13z" />
+                    </svg>
+
+                    <div class="card-body text-center">
+                        <h5>Estimate</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem minima non
+                            magnam
+                            eum quibusdam, </p>
+                        <a href="#">Read more.</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card w-100 text-center">
+                    <svg width="6em" height="6em" viewBox="0 0 16 16" class="c-card-logo bi bi-wallet2"
+                        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M12.136.326A1.5 1.5 0 0 1 14 1.78V3h.5A1.5 1.5 0 0 1 16 4.5v9a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 13.5v-9a1.5 1.5 0 0 1 1.432-1.499L12.136.326zM5.562 3H13V1.78a.5.5 0 0 0-.621-.484L5.562 3zM1.5 4a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-13z" />
+                    </svg>
+
+                    <div class="card-body text-center">
+                        <h5>Estimate</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem minima non
+                            magnam
+                            eum quibusdam, </p>
+                        <a href="#">Read more.</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-4 justify-content-center">
+            <div class="col-md-3">
+                <div class="card w-100 text-center">
+                    <svg width="6em" height="6em" viewBox="0 0 16 16" class="c-card-logo bi bi-wallet2"
+                        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M12.136.326A1.5 1.5 0 0 1 14 1.78V3h.5A1.5 1.5 0 0 1 16 4.5v9a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 13.5v-9a1.5 1.5 0 0 1 1.432-1.499L12.136.326zM5.562 3H13V1.78a.5.5 0 0 0-.621-.484L5.562 3zM1.5 4a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-13z" />
+                    </svg>
+
+                    <div class="card-body text-center">
+                        <h5>Estimate</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem minima non
+                            magnam
+                            eum quibusdam, </p>
+                        <a href="#">Read more.</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card w-100 text-center">
+                    <svg width="6em" height="6em" viewBox="0 0 16 16" class="c-card-logo bi bi-wallet2"
+                        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M12.136.326A1.5 1.5 0 0 1 14 1.78V3h.5A1.5 1.5 0 0 1 16 4.5v9a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 13.5v-9a1.5 1.5 0 0 1 1.432-1.499L12.136.326zM5.562 3H13V1.78a.5.5 0 0 0-.621-.484L5.562 3zM1.5 4a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-13z" />
+                    </svg>
+
+                    <div class="card-body text-center">
+                        <h5>Estimate</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem minima non
+                            magnam
+                            eum quibusdam, </p>
+                        <a href="#">Read more.</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-3">
+                <div class="card w-100 text-center">
+                    <svg width="6em" height="6em" viewBox="0 0 16 16" class="c-card-logo bi bi-wallet2"
+                        fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                        <path fill-rule="evenodd"
+                            d="M12.136.326A1.5 1.5 0 0 1 14 1.78V3h.5A1.5 1.5 0 0 1 16 4.5v9a1.5 1.5 0 0 1-1.5 1.5h-13A1.5 1.5 0 0 1 0 13.5v-9a1.5 1.5 0 0 1 1.432-1.499L12.136.326zM5.562 3H13V1.78a.5.5 0 0 0-.621-.484L5.562 3zM1.5 4a.5.5 0 0 0-.5.5v9a.5.5 0 0 0 .5.5h13a.5.5 0 0 0 .5-.5v-9a.5.5 0 0 0-.5-.5h-13z" />
+                    </svg>
+
+                    <div class="card-body text-center">
+                        <h5>Estimate</h5>
+                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quasi exercitationem minima non
+                            magnam
+                            eum quibusdam, </p>
+                        <a href="#">Read more.</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
+
+<section id="contactSection" class="text-light pb-5 pt-5">
+    <h1 class="text-center">Still having query ?</h1>
+    <p class="text-center">Feel free to contact us</p>
+    <div class="container">
+        <div class="col-md-7 mx-auto">
+            <div class="form-group">
+                <label>Name</label>
+                <input class="form-control" placeholder="Name">
+            </div>
+
+            <div class="form-row">
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>Phone</label>
+                        <input class="form-control" type="tel" placeholder="XXXX-XXXX-XX">
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="form-group">
+                        <label>Email</label>
+                        <input class="form-control" type="email" placeholder="abc@example.com">
+                    </div>
+                </div>
+            </div>
+
+            <div class="form-group">
+                <label>Services</label>
+                <select class="form-control">
+                    <option>Laptop Services</option>
+                    <option>Apple Services</option>
+                    <option>Projector Services</option>
+                </select>
+            </div>
+
+            <div class="form-group">
+                <label>Message</label>
+                <textarea class="form-control" placeholder="Type Message here."></textarea>
+            </div>
+
+            <button class="btn mt-5 btn-warning btn-block ml-auto">Submit</button>
+        </div>
     </div>
 </section>
