--- a/styles/main.scss
+++ b/styles/main.scss
@@ -22,7 +22,10 @@ h6{
 
 .nav-link{
     font-family: 'Roboto' sans-serif;
-    font-weight: 500;
+}
+.point-title{
+    font-size: 2rem;
+    margin-bottom: 2rem;
 }
 
 #bannerCarousel{
@@ -60,6 +63,10 @@ h6{
         border-radius: 20px;
         clip-path: circle(16%);
     }
+}
+
+#contactSection{
+    background-color: $color-primary;
 }
 
 #services{
