--- a/index.liquid
+++ b/index.liquid
@@ -405,3 +405,16 @@ layout: client-layout.liquid
         </div>
     </div>
 </section>
+
+<section id="featureSection" class="pg-5 pt-5">
+    <div class="container">
+        <div class="d-flex justify-content-center">
+            <div class="col-md-2">
+                <img src="/images/24_7.png" alt="support feature" class="w-100">
+            </div>
+            <div class="col-md-2">
+                <img src="/images/Secure-Online-Payment-Gateway.jpg" alt="support feature" class="w-100">
+            </div>
+        </div>
+    </div>
+</section>
