--- a/public/styles/variable.scss
+++ b/public/styles/variable.scss
@@ -1,3 +1,9 @@
 $color-primary: #009fa9;
 $bg-grey-1: #F8F8F8;
 $text-light: white;
+
+$breakpoint-xs: 0;
+$breakpoint-sm: 576px;
+$breakpoint-md: 768px;
+$breakpoint-lg: 992px;
+$breakpoint-xl: 1200px;
