--- a/_includes/client-layout.liquid
+++ b/_includes/client-layout.liquid
@@ -15,6 +15,15 @@
 </head>
 
 <body>
+    <div id="spinner-wrapper">
+        <div class="text-center">
+            <div class="spinner"></div>
+            <p class="d-block mt-3 lead text-light">Loading...</p>
+        </div>
+
+    </div>
+
+
     <div class="container-fluid topbar">
         <div class="container">
             <div class="d-flex flex-wrap justify-content-between">
@@ -86,7 +95,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
 
-            <a class="navbar-brand" href="/">Laptop Support</a>
+            <a class="navbar-brand" href="/">LaptopSupport.in</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav"
                 aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
@@ -164,7 +173,7 @@
                 </div>
             </div>
 
-            <p>Laptop support</p>
+            <p>Copyright <span id="currYear">2020</span> @ Laptopsupport.in</p>
         </div>
 
 
@@ -176,6 +185,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-ho+j7jyWK8fNQe+A12Hb8AhRq26LrZ/JpcUGGOn+Y7RsweNrtN/tE3MoK7ZeZDyx"
         crossorigin="anonymous"></script>
+    <script src="/scripts/main.js"></script>
 </body>
 
 </html>
