--- a/public/styles/main.scss
+++ b/public/styles/main.scss
@@ -6,6 +6,42 @@
 }
 
 
+div#spinner-wrapper{
+    width: 100%;
+    height: 100%;
+    position: fixed;
+    top: 0;
+    z-index: 999999;
+    background-color: rgba($color: black, $alpha: .8);
+
+    display: flex;
+    justify-content: center;
+    align-items: center;
+
+    .spinner{
+        transform-origin: center;
+        border: 10px solid #f3f3f3;
+        border-radius: 50%;
+        border-top: 10px solid $color-primary;
+        width: 100px;
+        height: 100px;
+        -webkit-animation: spin 2s linear infinite; /* Safari */
+        animation: spin 2s linear infinite;
+    }
+
+    .spinner-text{
+        font-size: 2rem;
+        color: $text-light;
+    }
+}
+
+@keyframes spin {
+    0% { transform: rotate(0deg); }
+    100% { transform: rotate(360deg); }
+  }
+
+
+
 div.topbar{
     background-color: $color-primary;
     padding: .5rem;
@@ -29,8 +65,8 @@ h6{
 }
 
 #bannerCarousel{
-    max-height: 80vh;
-    //overflow: hidden;
+    height: 90vh;
+    overflow: hidden;
     .banner-title{
         font-size:450%;
         letter-spacing: 6px;
@@ -39,12 +75,15 @@ h6{
     .carousel-item{
         
         img{
-            max-height: 80vh;
-            filter: brightness(50%);
+            
+            max-height: 100%;
+            
+            filter: brightness(40%);
         }
 
         .carousel-caption{
-            top: 40%;
+            top: 30%;
+            transform-origin: center;
         }
     }
 }
@@ -65,14 +104,55 @@ h6{
     }
 }
 
+a.btn-banner{
+    
+    margin: 1.5rem;
+    text-decoration: none;
+    font-size: 1.5rem;
+    padding: 1rem;
+    border: 2px solid $text-light;
+    border-radius: 10px;
+    &.call:hover{
+        background-color: $color-primary;
+        text-decoration: none;
+        color: $text-light;
+    }
+
+    &.inquiry:hover{
+        background-color: $color-primary;
+        text-decoration: none;
+        color: $text-light;
+    }
+
+    
+}
+
 #contactSection{
     background-color: $color-primary;
 }
-
+.section-title{
+    background: radial-gradient(circle at 30% 107%, #fdf497 0%, #fdf497 5%, #fd5949 45%,#d6249f 60%,#285AEB 90%);
+    -webkit-background-clip: text;
+    -webkit-text-fill-color: transparent !important;
+}
 #services{
     border-top-right-radius: 20%;
     border-bottom-right-radius: 20%;
+    background: rgb(2,59,68);
+    background: linear-gradient(149deg, rgba(2,59,68,1) 0%, rgba(0,187,213,1) 90%, rgba(0,224,255,1) 100%);
+  
+    ul{
+        list-style: none;
+        li{
+            font-size: 1.2rem;
+            &:before{
+                content: '👉';
+                margin-right: 1rem;
+            }
+        }
+    }
 }
+
 
 
 .c-card-logo{
@@ -120,3 +200,50 @@ footer.footer{
         }
     }
 }
+
+.emoji-icon{
+    font-size: 6rem;
+}
+
+
+
+
+@media screen and (max-width: $breakpoint-sm){
+    #services{
+        border-radius: 0;
+        background: rgb(2,59,68);
+        background: linear-gradient(149deg, rgba(2,59,68,1) 0%, rgba(0,187,213,1) 50%, rgba(2,59,68,1) 100%);
+    }
+
+    #bannerCarousel{
+        height: auto;
+
+        .carousel-caption{
+            text-align: left;
+            top: 3rem !important;
+        }
+        //overflow: hidden;
+        .banner-title{
+            font-size:1.7rem;
+            letter-spacing: 6px;    
+            font-family: 'Roboto', sans-serif;
+        }
+        p.lead{
+            font-size: 1rem !important;
+        }
+    }
+
+    a.btn-banner{
+        margin: .3rem;
+        text-decoration: none;
+        font-size: .9rem;
+        padding: 1rem;
+        
+    }
+
+}
+
+
+
+
+
